# oolel-translator

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
data/: sample_input.jsonl
output/: synthetic_wolof.jsonl
src/: inference.py  run.sh
tests/: conftest.py  test_cli_parsing.py  test_data_loading.py  test_output_saving.py  test_vllm_engine_kwargs.py
